--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <p>My primary interests lie in data mining, deep learning, and reinforcement learning, combining these techniques to extract meaningful insights from large datasets. Currently, I am seeking a thesis internship in data science and machine learning to apply my knowledge to solving real-world challenges.</p>
                 <p>With strong skills in Python and libraries such as Pandas, Polars, NumPy, Scikit-learn, and PyTorch, I am committed to developing impactful machine-learning models.</p>
                 <p>As a teaching assistant, I developed the ability to explain complex concepts in an intuitive way, helping students bridge the gap between theory and practical applications in data science and machine learning.</p>                <div class="social-icons" style="display: flex; align-items: center; gap: 15px;">
-                    <a class="social-icon" href="https://www.linkedin.com/in/georgios-xanthopoulos">
+                    <a class="social-icon" href="https://www.linkedin.com/in/gxantho">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
                     <a class="social-icon" href="https://github.com/gxanth/">
