Update(CV,Projects) Updated cv as well as updated the project section

--- a/index.html
+++ b/index.html
@@ -205,6 +205,31 @@
     <div class="resume-section-content">
         <h2 class="mb-5">Projects</h2>
         <p class="section-text">Below are presented some of my favourite projects during my studies.</p>
+    
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+    <div class="flex-grow-1">
+        <h3 class="mb-0">
+            <a href="https://www.kaggle.com/c/expedia-personalized-sort" target="_blank" style="text-decoration: none; color: inherit;">
+                Personalized Expedia Hotel Searches (Kaggle competition)
+            </a>
+        </h3>
+        <div class="subheading mb-3">Python, Polars, XGBoost, LambdaMART, Dash, Plotly
+             <a href="https://github.com/gxanth/Learning-to-rank-with-Expedia" target="_blank" style="margin-left: 10px;">
+        <i class="fab fa-github"></i>
+    </a>
+        </div>
+        <p>
+            Developed a learning-to-rank model for hotel search personalization as part of the 
+            <a href="https://www.kaggle.com/c/expedia-personalized-sort" target="_blank">Kaggle competition</a> 
+            <em>“Personalize Expedia Hotel Searches”.</em><br />
+            Used XGBoost’s LambdaMART to rank search results and 
+            processed large-scale query data efficiently with Polars for both feature engineering and generating 
+            data for visualizations. Achieved an NDCG score of 0.50 on the public leaderboard.<br /> Built an interactive 
+            dashboard using Dash and Plotly to visualize ranking performance and feature insights.
+        </p>
+    </div>
+</div>
+
 
 
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -219,18 +244,7 @@
             </div>
         </div>
 
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-                <h3 class="mb-0">Personalized Expedia Hotel Searches (Course Project)</h3>
-                <div class="subheading mb-3">Python, Polars, XGBoost, LambdaMART</div>
-                <p>
-                    Developed a learning-to-rank model for hotel search personalization as part of the 
-                    Data Mining course project, inspired by a Kaggle competition. Used XGBoost’s LambdaMART implementation 
-                    to rank search results. Processed large-scale query data with Polars to optimize efficiency 
-                    and feature engineering. Achieved an NDCG score of 0.34 on the course leaderboard.
-                </p>
-            </div>
-        </div>
+        
 
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
@@ -317,6 +331,12 @@
 
         <div class="subheading mt-4">Data Visualization</div>
         <ul>
+            <li class="list-inline-item mt-2">
+                <div style="display: flex; flex-direction: column; align-items: center;">
+                    <i class="devicon-plotly-plain colored" style="font-size: 2.5em;"></i>
+                    Plotly
+                </div>
+            </li>
             <li class="list-inline-item mt-2">
                 <div style="display: flex; flex-direction: column; align-items: center;">
                     <i class="devicon-matplotlib-plain " style="font-size: 2.7em;"></i>
